--- a/Cloud mobile course/DAY7/viewtest1/viewtest1/Base.lproj/Main.storyboard
+++ b/Cloud mobile course/DAY7/viewtest1/viewtest1/Base.lproj/Main.storyboard
@@ -23,6 +23,37 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DEu-sy-Pw7">
+                                <rect key="frame" x="184" y="167" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" systemColor="systemTealColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="actOnClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ngx-cZ-QYC"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="nJj-Kl-QyZ">
+                                <rect key="frame" x="143" y="205" width="131" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="" image="mouth" catalog="system"/>
+                                    <segment title="" image="hearingaid.ear" catalog="system"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segment" destination="BYZ-38-t0r" eventType="valueChanged" id="mfE-O3-H5o"/>
+                                    <action selector="segment:" destination="BYZ-38-t0r" eventType="valueChanged" id="eCZ-Ce-3co"/>
+                                </connections>
+                            </segmentedControl>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pl5-GS-FQH">
+                                <rect key="frame" x="159" y="257" width="97" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="onExit:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="naj-PF-2d0"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -37,8 +68,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="hearingaid.ear" catalog="system" width="105" height="128"/>
+        <image name="mouth" catalog="system" width="128" height="67"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
