--- a/Cloud mobile course/DAY8/pickerViewTest/pickerViewTest/Base.lproj/Main.storyboard
+++ b/Cloud mobile course/DAY8/pickerViewTest/pickerViewTest/Base.lproj/Main.storyboard
@@ -20,11 +20,19 @@
                                 <rect key="frame" x="0.0" y="428" width="414" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUz-ON-Wqq">
+                                <rect key="frame" x="186" y="252" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
+                        <outlet property="label" destination="lUz-ON-Wqq" id="9kf-xt-n3O"/>
                         <outlet property="pickerView" destination="y5v-fW-A9L" id="hSv-Dh-xZO"/>
                     </connections>
                 </viewController>
