--- a/swift_study/DAY17/CoronaInfo/CoronaInfo/Base.lproj/Main.storyboard
+++ b/swift_study/DAY17/CoronaInfo/CoronaInfo/Base.lproj/Main.storyboard
@@ -64,10 +64,10 @@
             </objects>
             <point key="canvasLocation" x="-726" y="-508"/>
         </scene>
-        <!--View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="O1O-k8-eVs">
             <objects>
-                <viewController id="G0r-zk-csu" sceneMemberID="viewController">
+                <viewController id="G0r-zk-csu" customClass="MapViewController" customModule="CoronaInfo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kKn-wz-4cW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
